# owanimo_bevy

./: .gitignore  Cargo.toml  README.md  TODO-JIGGLE.md  index.html  justfile  state_graph.txt
assets/: bignuisancepuyo.blend  bignuisancepuyo.blend1  bignuisancepuyo.glb  bluepuyo.blend  bluepuyo.blend1  bluepuyo.glb  greenpuyo.blend  greenpuyo.blend1  greenpuyo.glb  nuisancepuyo.blend  nuisancepuyo.blend1  nuisancepuyo.glb  purplepuyo.blend  purplepuyo.blend1  purplepuyo.glb  redpuyo.blend  redpuyo.blend1  redpuyo.glb  yellowpuyo.blend  yellowpuyo.blend1  yellowpuyo.glb
src/: lib.rs  main.rs  owanimo_impl.rs  puy_ass.rs  puy_components.rs  puyo_chara.rs
src/puy_components/: banish_puyos.rs  fall_puyo.rs  falljiggle_or_still.rs  finish_banishing_puyo.rs  jiggle.rs  mod.rs  owanimo_puyos.rs  puy_randomizers.rs  puyo_component.rs  spawn_cartes_board.rs  spawn_puyo.rs
src/screensaver_rule/: main_loop.rs  mod.rs  owanimo_impl.rs
src/screensaver_rule/main_loop/: board_banish.rs  board_physics.rs  spawn_random.rs
www/: index.html
