[package]
name = "owanimo_bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.31.0"
bevy_fly_camera = "0.16.0"
bevy_rand = { version = "0.11.0", features = ["rand_xoshiro"] }
owanimo = { path = "../owanimo", version = "0.1.0" }
jiggly_fever = { path = "../jiggly_fever", version = "0.1.0" }
rand = "0.9.1"
rand_xoshiro = "0.7.0"

[profile.release]
opt-level = 2
strip = "debuginfo"
lto = "thin"

[profile.dev.package."*"]
opt-level = 2
